@@ -102,7 +102,7 @@ public class MapHandler extends Handler {
 		assert r.current() == '{';
 
 		@SuppressWarnings("unchecked")
-		Map<Object,Object> map = (Map<Object,Object>) rawClass.newInstance();
+		Map<Object,Object> map = (Map<Object,Object>) rawClass.getConstructor().newInstance();
 
 		int c = r.next();
 		while (JSONCodec.START_CHARACTERS.indexOf(c) >= 0) {
