@@ -634,7 +634,7 @@ public class NanoHTTPD {
 						matchbyte = i;
 					matchcount++;
 					if (matchcount == boundary.length) {
-						matchbytes.addElement(new Integer(matchbyte));
+						matchbytes.addElement(Integer.valueOf(matchbyte));
 						matchcount = 0;
 						matchbyte = -1;
 					}
@@ -666,7 +666,7 @@ public class NanoHTTPD {
 					fstream.close();
 					path = temp.getAbsolutePath();
 				} catch (Exception e) { // Catch exception if any
-					System.err.println("Error: " + e.getMessage());
+					System.err.println("Error: " + e);
 				}
 			}
 			return path;
